<resources>
    <string name="app_name">logintrial0</string>
    <string name="login_app">Login app</string>
    <string name="create_new_account1">Create New Account</string>
    <string name="email1">Email</string>
    <string name="password1">password</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New here? Create Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_app1">Login app</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="email">Email</string>
    <string name="everything_you_need_is_here">Everything you need is here..</string>
    <string name="study_buddy">Study Buddy</string>
    <string name="todo2">TODO1</string>
    <string name="forget_password1" />
    <string name="forget_password2">Forget Password</string>
    <string name="logout">Logout</string>
    <string name="email_not_verified">Email Not Verified !</string>
    <string name="verify_now">Verify now</string>
    <string name="welcome_to_dashboard">Welcome to dashboard</string>
    <string name="back_to_login_page">Back to login page..</string>
    <string name="get_link">Get link</string>
    <string name="phone_no">phone no.</string>
    <string name="hello">Hello,</string>
    <string name="welcome_back">welcome back !</string>
    <string name="user_name">User Name</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
</resources>