<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:fontFamily="@font/barlow_bold"
                android:text="Your Profile"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="170dp"
                android:onClick="logout"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileEnrollment"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/verifymsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_not_verified"
                android:textColor="#FF0000"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002"
                tools:visibility="gone" />

            <Button
                android:id="@+id/resendcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_now"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verifymsg"
                app:layout_constraintVertical_bias="0.0"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/profileimage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_launcher_background"
                android:contentDescription="ignore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="HardcodedText,ImageContrastCheck"
                tools:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_medium"
                android:text="Your FIrst Name"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/profilelastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_medium"
                android:text="Your Last Name"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_medium"
                android:text="Your Email Address"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/profilePhonenumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_medium"
                android:text="Phone Number"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/profileEnrollment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_medium"
                android:text="Your Enrollment No."
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_bold"
                android:text="First Name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileimage"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_bold"
                android:text="Last Name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileName"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_bold"
                android:text="Email ID"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilelastName"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_bold"
                android:text="Phone"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileEmail"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_bold"
                android:text="Enrollment No."
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePhonenumber"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/profileimagebutton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Change Profile"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileimage"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="HardcodedText,SmallSp" />

            <!--    <Button-->
            <!--        android:id="@+id/webview"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="Button"-->
            <!--        app:layout_constraintBottom_toBottomOf="parent"-->
            <!--        app:layout_constraintEnd_toStartOf="@+id/button"-->
            <!--        app:layout_constraintStart_toStartOf="parent"-->
            <!--        app:layout_constraintTop_toBottomOf="@+id/profileEnrollment"-->
            <!--        app:layout_constraintVertical_bias="0.26999998" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#F3F1FA"
        android:layout_marginBottom="93dp"
        app:cardCornerRadius="32dp"
        android:background="@drawable/shape"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#E9E1FF"
            android:background="#E9E1FF"
            android:layout_below="@+id/scroll11"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/text111111"
                android:src="@drawable/ic_baseline_double_arrow_24">


            </ImageView>

            <TextView
                android:id="@+id/text111111"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/barlow_bold"
                android:gravity="center"
                android:text="Swipe Right"
                android:textColor="#00BEFF"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/swipeimage4"
                android:layout_width="match_parent"

                android:layout_height="match_parent">

            </ImageView>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape"
        app:itemIconTint="@drawable/item_color"
        app:itemRippleColor="#00BEFF"
        app:itemTextColor="@drawable/item_color"
        app:menu="@menu/menu" />


</RelativeLayout>